feat: 切换使用iframe方式

--- a/apply/apply-success.html
+++ b/apply/apply-success.html
@@ -11,7 +11,7 @@
 <div class="container margin-top-15">
 	<div class="panel panel-success">
 		<div class="panel-body">
-			<div class="msg">恭喜提交成功！</div>
+			<div class="msg-title">恭喜提交成功！</div>
 			<div class="row">
 				<div class="col-xs-6">
 					<a href="apply.html" class="btn btn-default btn-block">返回 重新认证</a>
