--- a/zhuake/add.html
+++ b/zhuake/add.html
@@ -1,115 +1,111 @@
-<link rel="import" href="../components/head.html?__inline">
+<link rel="import" href="../components/head-iframe.html?__inline">
 
-<link rel="import" href="../components/common-header.html?__inline">
-
-<link rel="import" href="../components/menu-zhuake.html?__inline">
-
-<div class="container">
-	<div class="map-head"><span class="vertical-line"></span>新增客资</div>
-	<div class="panel panel-primary">
-		<form action="add-success.html" class="form-horizontal form" role="form">
-			<div class="panel-body">
-				<div class="form-group">
-					<label for="call" class="col-xs-4 control-label no-padding-left">
+	<div class="container">
+		<div class="map-head"><span class="vertical-line"></span>新增客资</div>
+		<div class="panel panel-primary">
+			<form action="add-success.html" class="form-horizontal form" role="form">
+				<div class="panel-body">
+					<div class="form-group">
+						<label for="call" class="col-xs-4 control-label no-padding-left">
             <span class="icon glyphicon glyphicon-search"></span> 称呼
           </label>
-					<div class="col-xs-8 no-padding-left">
-						<input type="text" class="form-control" id="call">
+						<div class="col-xs-8 no-padding-left">
+							<input type="text" class="form-control" id="call">
+						</div>
 					</div>
-				</div>
-				<div class="form-group">
-					<label for="call" class="col-xs-4 control-label no-padding-left">
+					<div class="form-group">
+						<label for="call" class="col-xs-4 control-label no-padding-left">
             <span class="icon glyphicon glyphicon-search"></span> 渠道
           </label>
-					<div class="col-xs-8 no-padding-left">
-						<select class="form-control">
+						<div class="col-xs-8 no-padding-left">
+							<select class="form-control">
               <option>1</option>
               <option>2</option>
               <option>3</option>
               <option>4</option>
               <option>5</option>
             </select>
+						</div>
 					</div>
-				</div>
-				<div class="form-group">
-					<label for="call" class="col-xs-4 control-label no-padding-left">
+					<div class="form-group">
+						<label for="call" class="col-xs-4 control-label no-padding-left">
             <span class="icon glyphicon glyphicon-search"></span> 地区
           </label>
-					<div class="col-xs-8 no-padding-left">
-						<select class="form-control">
+						<div class="col-xs-8 no-padding-left">
+							<select class="form-control">
               <option>1</option>
               <option>2</option>
               <option>3</option>
               <option>4</option>
               <option>5</option>
             </select>
+						</div>
 					</div>
-				</div>
-				<div class="form-group">
-					<label for="call" class="col-xs-4 control-label no-padding-left">
+					<div class="form-group">
+						<label for="call" class="col-xs-4 control-label no-padding-left">
             <span class="icon glyphicon glyphicon-search"></span> 类别
           </label>
-					<div class="col-xs-8 no-padding-left">
-						<select class="form-control">
+						<div class="col-xs-8 no-padding-left">
+							<select class="form-control">
               <option>1</option>
               <option>2</option>
               <option>3</option>
               <option>4</option>
               <option>5</option>
             </select>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="panel-body">
-				<div class="form-group">
-					<label for="call" class="col-xs-4 control-label no-padding-left">
+				<div class="panel-body">
+					<div class="form-group">
+						<label for="call" class="col-xs-4 control-label no-padding-left">
             <span class="icon glyphicon glyphicon-search"></span> 手机
           </label>
-					<div class="col-xs-8 no-padding-left">
-						<input type="text" class="form-control" id="call">
+						<div class="col-xs-8 no-padding-left">
+							<input type="text" class="form-control" id="call">
+						</div>
 					</div>
-				</div>
-				<div class="form-group">
-					<label for="call" class="col-xs-4 control-label no-padding-left">
+					<div class="form-group">
+						<label for="call" class="col-xs-4 control-label no-padding-left">
             <span class="icon glyphicon glyphicon-search"></span> 微信
           </label>
-					<div class="col-xs-8 no-padding-left">
-						<input type="text" class="form-control" id="call">
+						<div class="col-xs-8 no-padding-left">
+							<input type="text" class="form-control" id="call">
+						</div>
 					</div>
-				</div>
-				<div class="form-group">
-					<label for="call" class="col-xs-4 control-label no-padding-left">
+					<div class="form-group">
+						<label for="call" class="col-xs-4 control-label no-padding-left">
             <span class="icon glyphicon glyphicon-search"></span> Q Q
           </label>
-					<div class="col-xs-8 no-padding-left">
-						<input type="text" class="form-control" id="call">
+						<div class="col-xs-8 no-padding-left">
+							<input type="text" class="form-control" id="call">
+						</div>
 					</div>
-				</div>
-				<div class="form-group">
-					<label for="call" class="col-xs-4 control-label no-padding-left">
+					<div class="form-group">
+						<label for="call" class="col-xs-4 control-label no-padding-left">
             <span class="icon glyphicon glyphicon-search"></span> 身份
           </label>
-					<div class="col-xs-8 no-padding-left">
-						<input type="text" class="form-control" id="call">
+						<div class="col-xs-8 no-padding-left">
+							<input type="text" class="form-control" id="call">
+						</div>
 					</div>
-				</div>
-				<div class="form-group">
-					<label for="call" class="col-xs-4 control-label">
+					<div class="form-group">
+						<label for="call" class="col-xs-4 control-label">
             沟通记录
           </label>
-					<div class="col-xs-12">
-						<textarea class="form-control" rows="3"></textarea>
+						<div class="col-xs-12">
+							<textarea class="form-control" rows="3"></textarea>
+						</div>
 					</div>
-				</div>
 
-				<div class="form-group">
-					<div class="col-xs-offset-2 col-xs-8">
-						<input type="submit" class="btn btn-primary btn-block" value="提交">
+					<div class="form-group">
+						<div class="col-xs-offset-2 col-xs-8">
+							<input type="submit" class="btn btn-primary btn-block" value="提交">
+						</div>
 					</div>
 				</div>
-			</div>
-		</form>
+			</form>
+		</div>
 	</div>
-</div>
 
-<link rel="import" href="../components/foot.html?__inline">
+<link rel="import" href="../components/foot-iframe.html?__inline">
