--- a/zhuake/mine.html
+++ b/zhuake/mine.html
@@ -1,8 +1,4 @@
-<link rel="import" href="../components/head.html?__inline">
-
-<link rel="import" href="../components/common-header.html?__inline">
-
-<link rel="import" href="../components/menu-zhuake.html?__inline">
+<link rel="import" href="../components/head-iframe.html?__inline">
 
 <div class="container">
 	<div class="map-head">
@@ -60,4 +56,4 @@
 	</table>
 </div>
 
-<link rel="import" href="../components/foot.html?__inline">
+<link rel="import" href="../components/foot-iframe.html?__inline">
