feat: 完成邀约客服界面的iframe布局

--- a/yaoyue/index.html
+++ b/yaoyue/index.html
@@ -14,9 +14,9 @@
 		</div>
 	</div>
 	<div class="menu">
-		<a href="add.html" target="iframe" class="item">
+		<a href="new.html" target="iframe" class="item">
 			<span class="icon glyphicon glyphicon-search"></span>
-			<span class="title">新增</span>
+			<span class="title">新客</span>
 		</a>
 		<a href="list.html" target="iframe" class="item">
 			<span class="icon glyphicon glyphicon-search"></span>
@@ -28,9 +28,6 @@
 		</a>
 	</div>
 
-	<iframe id="iframe" name="iframe" src="mine.html" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+	<iframe id="iframe" name="iframe" src="new.html" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
 
 <link rel="import" href="../components/foot.html?__inline">
-
-<!--detail.html?id=bd7666a8-57b0-4e3e-83f8-3923fad26800-->
-	
