--- a/apply/apply.html
+++ b/apply/apply.html
@@ -1,71 +1,61 @@
-<link rel="import" href="../components/head.html?__inline">
-<div class="header apply-header">
-	<div class="site">
-		<span class="name">网销大师</span>
-		<span class="version">v3.0云端版</span>
-	</div>
-	<div class="title">
-		功能申请
-	</div>
-</div>
+<link rel="import" href="../components/head-iframe.html?__inline">
 
 <div class="container margin-top-15">
 	<div class="panel panel-primary">
 		<div class="panel-body">
-			<form action="apply-success.html" class="form-horizontal form" role="form">
+			<form id="form" action="" class="form-horizontal form" role="form">
 				<div class="form-group">
-					<label for="call" class="col-xs-4 control-label no-padding-left">
+					<label class="col-xs-4 control-label no-padding-left">
             <span class="icon glyphicon glyphicon-search"></span> 称呼
           </label>
 					<div class="col-xs-8 no-padding-left">
-						<input type="text" class="form-control" id="call">
+						<input name="name" type="text" class="form-control">
 					</div>
 				</div>
 				<div class="form-group">
-					<label for="call" class="col-xs-4 control-label no-padding-left">
+					<label class="col-xs-4 control-label no-padding-left">
             <span class="icon glyphicon glyphicon-search"></span> 公司
           </label>
 					<div class="col-xs-8 no-padding-left">
-						<input type="text" class="form-control" id="call">
+						<select name="company_id" class="form-control">
+            </select>
 					</div>
 				</div>
 				<div class="form-group">
-					<label for="call" class="col-xs-4 control-label no-padding-left">
+					<label class="col-xs-4 control-label no-padding-left">
             <span class="icon glyphicon glyphicon-search"></span> 职位
           </label>
 					<div class="col-xs-8 no-padding-left">
-						<input type="text" class="form-control" id="call">
+						<input name="user_job" type="text" class="form-control">
 					</div>
 				</div>
 				<div class="form-group">
-					<label for="call" class="col-xs-4 control-label no-padding-left">
+					<label class="col-xs-4 control-label no-padding-left">
+            <span class="icon glyphicon glyphicon-search"></span> 手机
+          </label>
+					<div class="col-xs-8 no-padding-left">
+						<input name="tel" type="text" class="form-control">
+					</div>
+				</div>
+				<div class="form-group">
+					<label class="col-xs-4 control-label no-padding-left">
             <span class="icon glyphicon glyphicon-search"></span> 岗位
           </label>
 					<div class="col-xs-4 no-padding-left">
-						<select class="form-control">
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
-              <option>5</option>
+						<select name="department_id" class="form-control">
             </select>
 					</div>
 					<div class="col-xs-4 no-padding-left">
-						<select class="form-control">
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
-              <option>5</option>
+						<select name="work_center_id" class="form-control">
             </select>
 					</div>
 				</div>
 				<div class="form-group">
-					<label for="call" class="col-xs-4 control-label no-padding-left">
+					<label class="col-xs-4 control-label no-padding-left">
             <span class="icon glyphicon glyphicon-search"></span> 头像
           </label>
 					<div class="col-xs-8 no-padding-left">
-						<input type="text" class="form-control" id="call">
+						<input name="photo" type="text" class="form-control">
 					</div>
 				</div>
 				<div class="form-group">
@@ -78,4 +68,49 @@
 	</div>
 </div>
 
-<link rel="import" href="../components/foot.html?__inline">
+<script>
+	// 公司
+  api.listIdAndName('SysCompany', function(options){
+    $('select[name=company_id]').text(options);
+  });
+
+	// 部门级联更改
+	$('select[name=company_id]').change(function(){
+		// 部门
+		api.listIdAndName('SysDepartment', function(options){
+			$('select[name=department_id]').text(options);
+		});
+	});
+
+	// 组别级联更改
+	$('select[name=department_id]').change(function(){
+		// 组别
+		api.listIdAndName('SysWorkCenter', function(options){
+			$('select[name=work_center_id]').text(options);
+		});
+	});
+
+	// 表单提交
+  $('#form').submit(function(){
+    var params = {},
+        values = $("#form").serializeArray();
+    // 表单数据
+    $.each(values, function(index,item){
+      params[item.name] = item.value;
+    });
+    // 额外数据
+    params['openid'] = api.openid;
+    // 调用接口
+    api.saveObject('BusCustomer', params, function(data){
+      // console.log(data);
+			if(data.retMsg == 'OK'){
+				$('#iframe').attr('src', 'add-success.html');
+			}else{
+				alert(data.retMsg);
+			}
+    });
+    return false;
+  });
+</script>
+
+<link rel="import" href="../components/foot-iframe.html?__inline">
