--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <link rel="import" href="components/head.html?__inline">
 
   <h1>你好，世界！</h1>
-  <a href="apply/apply.html">功能申请</a><br/>
-  <a href="zhuake/add.html">抓客</a><br/>
-  <a href="yaoyue/new.html">邀约</a><br/>
-  <a href="menshi/new.html">门市</a><br/>
+  <a href="apply/index.html">功能申请</a><br/>
+  <a href="zhuake/index.html">抓客</a><br/>
+  <a href="yaoyue/index.html">邀约</a><br/>
+  <a href="menshi/index.html">门市</a><br/>
+
+  <script src="js/jquery-2.0.3.min.js"></script>
+  <script src="js/app-iframe.js"></script>
+  <script>
+    api.login();
+  </script>
 
 <link rel="import" href="components/foot.html?__inline">
