--- a/yaoyue/detail.html
+++ b/yaoyue/detail.html
@@ -1,8 +1,4 @@
-<link rel="import" href="../components/head.html?__inline">
-
-<link rel="import" href="../components/common-header.html?__inline">
-
-<link rel="import" href="../components/menu-yaoyue.html?__inline">
+<link rel="import" href="../components/head-iframe.html?__inline">
 
 <div class="container">
 	<div class="map-head"><span class="vertical-line"></span>客资详情</div>
@@ -13,4 +9,4 @@
   <link rel="import" href="../components/detail-yaoyue.html?__inline">
 </div>
 
-<link rel="import" href="../components/foot.html?__inline">
+<link rel="import" href="../components/foot-iframe.html?__inline">
