--- a/yaoyue/list.html
+++ b/yaoyue/list.html
@@ -1,8 +1,4 @@
-<link rel="import" href="../components/head.html?__inline">
-
-<link rel="import" href="../components/common-header.html?__inline">
-
-<link rel="import" href="../components/menu-yaoyue.html?__inline">
+<link rel="import" href="../components/head-iframe.html?__inline">
 
 <div class="container">
   <div class="map-head">
@@ -73,4 +69,4 @@
 
 </div>
 
-<link rel="import" href="../components/foot.html?__inline">
+<link rel="import" href="../components/foot-iframe.html?__inline">
