--- a/yaoyue/mine-info.html
+++ b/yaoyue/mine-info.html
@@ -1,22 +1,5 @@
-<link rel="import" href="../components/head.html?__inline">
+<link rel="import" href="../components/head-iframe.html?__inline">
 
-<link rel="import" href="../components/common-header.html?__inline">
-
-<link rel="import" href="../components/menu-yaoyue.html?__inline">
-
-<div class="container">
-  <div class="map-head">
-		<span class="vertical-line"></span>我的
-		<div class="filter">
-			<div class="btn-group">
-				<a href="mine.html" type="button" class="btn btn-sm btn-default">数据</a>
-				<a href="mine-message.html" class="btn btn-sm btn-default">消息</a>
-				<a href="mine-info.html" class="btn btn-sm btn-primary">资料</a>
-				<a href="mine-target.html" class="btn btn-sm btn-default">目标</a>
-			</div>
-		</div>
-	</div>
   Info 未知界面
-</div>
 
-<link rel="import" href="../components/foot.html?__inline">
+<link rel="import" href="../components/foot-iframe.html?__inline">
