--- a/yaoyue/mine-target.html
+++ b/yaoyue/mine-target.html
@@ -1,21 +1,5 @@
-<link rel="import" href="../components/head.html?__inline">
+<link rel="import" href="../components/head-iframe.html?__inline">
 
-<link rel="import" href="../components/common-header.html?__inline">
-
-<link rel="import" href="../components/menu-yaoyue.html?__inline">
-
-<div class="container">
-	<div class="map-head">
-		<span class="vertical-line"></span>我的
-		<div class="filter">
-			<div class="btn-group">
-				<a href="mine.html" type="button" class="btn btn-sm btn-default">数据</a>
-				<a href="mine-message.html" class="btn btn-sm btn-default">消息</a>
-				<a href="mine-info.html" class="btn btn-sm btn-default">资料</a>
-				<a href="mine-target.html" class="btn btn-sm btn-primary">目标</a>
-			</div>
-		</div>
-	</div>
 	<p>设置本月的目标</p>
 	<div class="panel panel-primary">
 		<div class="panel-body">
@@ -59,7 +43,4 @@
 		</div>
 	</div>
 
-
-</div>
-
-<link rel="import" href="../components/foot.html?__inline">
+<link rel="import" href="../components/foot-iframe.html?__inline">
