--- a/yaoyue/new.html
+++ b/yaoyue/new.html
@@ -1,8 +1,4 @@
-<link rel="import" href="../components/head.html?__inline">
-
-<link rel="import" href="../components/common-header.html?__inline">
-
-<link rel="import" href="../components/menu-yaoyue.html?__inline">
+<link rel="import" href="../components/head-iframe.html?__inline">
 
 <div class="container">
   <div class="map-head"><span class="vertical-line"></span>新推送的客资</div>
@@ -10,4 +6,4 @@
   <link rel="import" href="../components/new-customer.html?__inline">
 </div>
 
-<link rel="import" href="../components/foot.html?__inline">
+<link rel="import" href="../components/foot-iframe.html?__inline">
